# draftwright

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  drawing.dxf  pyproject.toml  stepped555.py  tmpi22wi07g.py  tmpojljiav7.py
.github/workflows/: ci.yml  publish.yml
docs/: HANDOVER.md  layout-algorithm-primer.md  target-architecture.md
docs/adr/: 0001-deterministic-generation-over-editable-dsl.md  0002-iterate-via-lint-critique-and-domain-repair.md  0003-constraint-based-layout.md  0004-compose-then-pack-view-blocks.md  0005-compiler-pipeline-module-boundaries.md  0005-pipeline-architecture-and-state-ownership.md  0006-deterministic-layout-via-bundled-fonts.md  0007-own-recognition-and-linting.md  0008-unified-feature-model-and-dimensioning-planner.md  0009-boundary-labeling-strip-placement.md  0010-annotation-provenance-seam.md  0011-ir-as-public-input.md  0012-edits-as-pinned-priority-candidates-in-the-global-solve.md  0013-shared-recognition-package.md  0013-uniform-recognition-and-shared-package.md  0014-collect-then-solve-annotation-placement.md  0015-part-drawing-compiler-as-built.md  README.md
docs/plans/: 0008-compiler-migration-roadmap.md  0008-convergence-roadmap.md  0011-phase2-aspects-roadmap.md  0013-shared-recognisers-roadmap.md  138-module-split-roadmap.md  consolidation-roadmap.md  product-backlog-roadmap.md  right-first-time-roadmap.md  strip-layout-boundary-labeling-roadmap.md
docs/research/: annotation-placement-boundary-labeling.md
skills/: SKILL.md
src/draftwright/: __init__.py  _core.py  _geometry.py  analysis.py  annotate.py  builder.py  cli.py  compose.py  drawing.py  export.py  features.py  fits.py  intents.py  layout.py  linting.py  make_drawing.py  pmi.py  projection.py  registry.py  repair.py  score.py  sheet.py  sheet_dsl.py  sheet_emit.py
src/draftwright/annotations/: __init__.py  _common.py  balloons.py  from_model.py  holes.py  orchestrator.py  pmi.py  sections.py  turned.py
src/draftwright/fonts/: __init__.py
src/draftwright/linting/: __init__.py  coverage.py  issues.py  structural.py  suggest.py
src/draftwright/model/: __init__.py  declare.py  detect.py  ir.py  planner.py  render.py
src/draftwright/recognition/: __init__.py  _features.py  _record.py  chamfers.py  countersinks.py  fillets.py  flats.py  grooves.py  levels.py  plates.py  slots.py  turned.py
tests/: _kernel.py  _layout_sig.py  test_agents_guide.py  test_architecture_docs.py  test_carve_free_position_callers.py  test_declare.py  test_dense_sheet_canary.py  test_detect_once.py  test_detect_registry.py  test_drawing_encapsulation.py  test_e2e_slice.py  test_e2e_standards.py  test_export_dxf_zoom.py  test_fillets_adjacency.py  test_fits.py  test_gdt_placement.py  test_golden.py  test_import_boundaries.py  test_layout.py  test_layout_cleanliness.py  test_layout_hypothesis.py  test_layout_property.py  test_layout_snapshot.py  test_lint_box_cache.py  test_lint_reconciliation.py  test_lint_structural.py  test_linting.py  test_make_drawing.py  test_migration_gate.py  test_note_verb.py  test_object_aspects.py  test_occupancy_boxes.py  test_part_model.py  test_pitch_dim_footprint.py  test_pmi.py  test_pocket_pattern.py  test_pocket_pattern_recognition.py  test_private_test_attr_reads.py  test_private_test_imports.py  test_recogniser_contract.py  (+17 more)
tests/_migration_gate/: snapshot.json
tests/fixtures/: grm03_thumbwheel_drive_screw.step  tuner_jig_blind_obround_pockets.step
tests/golden/: ctc01.json  cylinder.json  holed_plate.json  plate.json  stepped.json
tests/layout_snapshots/: box.json  bracket.json  drive_screw_x.json  dshape.json  flange.json  holed_slot.json  plate_holes.json  side_drilled.json  slotted.json  turned_shaft.json
tests/refactor_golden/: bracket_section.json  centered_rebate.json  chamfered.json  filleted.json  flange_dense.json  grid_plate.json  grooved_shaft.json  hex_bar.json  holed_slot.json  pocketed.json  prismatic_ladder.json  scattered_plate.json  side_drilled.json  turned_stepped.json
