[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draftwright"
version = "0.1.10.dev0"
description = "Automated technical-drawing generation for build123d"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Paul Fremantle", email = "pzfreo@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "build123d>=0.9.0",
    "build123d-drafting-helpers>=0.10.0",
    "kiwisolver>=1.4,<2",
    "numpy>=1.24",
]
keywords = ["build123d", "cad", "drafting", "engineering-drawing", "technical-drawing", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
pdf = ["cairosvg>=2.7"]

[project.scripts]
draftwright = "draftwright.make_drawing:_cli"

[project.urls]
Homepage = "https://github.com/pzfreo/draftwright"
Repository = "https://github.com/pzfreo/draftwright"
Issues = "https://github.com/pzfreo/draftwright/issues"
Changelog = "https://github.com/pzfreo/draftwright/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/draftwright"]

[tool.hatch.build.targets.sdist]
include = [
    "src/draftwright",
    "tests",
    "skills",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
# `slow` covers the heavy end-to-end builds over the large NIST CTC fixtures
# (minutes each). They are deselected by default for a fast normal run; run the
# full suite with `-m ""` or just the slow tier with `-m slow` (CI runs both).
markers = ["slow: heavy end-to-end CTC fixture builds (deselected by default)"]
addopts = "--tb=short --cov=src/draftwright --cov-report=term-missing --cov-report=xml -m 'not slow'"

[tool.coverage.run]
source = ["src/draftwright"]
omit = ["src/draftwright/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-timeout>=2",
    "ruff>=0.4",
]
