[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draftwright"
version = "0.1.13.dev0"
description = "Automated technical-drawing generation for build123d"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Paul Fremantle", email = "pzfreo@gmail.com" }]
requires-python = ">=3.10,<3.15"
dependencies = [
    "build123d>=0.9.0",
    "build123d-drafting-helpers>=0.13.0",
    "kiwisolver>=1.4,<2",
    "numpy>=1.24",
]
keywords = ["build123d", "cad", "drafting", "engineering-drawing", "technical-drawing", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
pdf = ["cairosvg>=2.7"]

[project.scripts]
draftwright = "draftwright.make_drawing:_cli"

[project.urls]
Homepage = "https://github.com/pzfreo/draftwright"
Repository = "https://github.com/pzfreo/draftwright"
Issues = "https://github.com/pzfreo/draftwright/issues"
Changelog = "https://github.com/pzfreo/draftwright/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/draftwright"]

[tool.hatch.build.targets.sdist]
include = [
    "src/draftwright",
    "tests",
    "skills",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
# `slow` covers the heavy end-to-end builds over the large NIST CTC fixtures
# (minutes each), deselected by default. `smoke` is a curated, build-light subset
# (~30 s) for a quick local "did I break something obvious" check — run it with
# `uv run pytest -m smoke`. The default run is the full fast tier (`-m 'not slow'`,
# ~8 min); CI owns that plus the slow tier across the OS/Python matrix.
markers = [
    "slow: heavy end-to-end CTC fixture builds (deselected by default)",
    "smoke: curated build-light subset for a fast local check (~30 s)",
]
# Coverage is a CI concern (it adds ~13% locally and instruments every line); the
# CI workflow passes the --cov flags explicitly. Keep the local default lean.
addopts = "--tb=short -m 'not slow'"

[tool.coverage.run]
source = ["src/draftwright"]
omit = ["src/draftwright/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-timeout>=2",
    "ruff>=0.4",
]
