[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draftwright"
version = "0.2.11.dev0"
description = "Automated technical-drawing generation for build123d"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Paul Fremantle", email = "pzfreo@gmail.com" }]
requires-python = ">=3.10,<3.15"
dependencies = [
    # build123d ≤0.10 pulls cadquery-ocp (VTK), whose VTK caps at Python 3.12; 0.11 switched to
    # cadquery-ocp-novtk, which ships 3.13/3.14 wheels and drops VTK entirely (draftwright is
    # headless — it never imports VTK). Split by Python: keep the proven ≤3.12 stack, use 0.11 on
    # 3.13+. Mirrors pzfreo/build123d-mcp's dependency handling.
    "build123d>=0.9.0,<0.11 ; python_full_version < '3.13'",
    "build123d>=0.11,<0.12 ; python_full_version >= '3.13'",
    "build123d-drafting-helpers>=0.13.0",
    "numpy>=1.24",
    "reportlab>=4.0",
    "svglib>=1.5",
    "typer>=0.12",
]
keywords = ["build123d", "cad", "drafting", "engineering-drawing", "technical-drawing", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
draftwright = "draftwright.cli:app"

[project.urls]
Homepage = "https://github.com/pzfreo/draftwright"
Repository = "https://github.com/pzfreo/draftwright"
Issues = "https://github.com/pzfreo/draftwright/issues"
Changelog = "https://github.com/pzfreo/draftwright/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/draftwright"]

[tool.hatch.build.targets.sdist]
include = [
    "src/draftwright",
    "tests",
    "skills",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
# `slow` covers the heavy end-to-end builds over the large NIST CTC fixtures
# (minutes each), deselected by default. `smoke` is a curated, build-light subset
# (~30 s) for a quick local "did I break something obvious" check — run it with
# `uv run pytest -m smoke`. The default run is the full fast tier (`-m 'not slow'`,
# ~8 min); CI owns that plus the slow tier across the OS/Python matrix.
markers = [
    "slow: heavy end-to-end CTC fixture builds (deselected by default)",
    "smoke: curated build-light subset for a fast local check (~30 s)",
]
# Coverage is a CI concern (it adds ~13% locally and instruments every line); the
# CI workflow passes the --cov flags explicitly. Keep the local default lean.
addopts = "--tb=short -m 'not slow'"

[tool.coverage.run]
source = ["src/draftwright"]
omit = ["src/draftwright/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
# Tightened on the settled module contracts (#138 / ADR 0005 P7). disallow_untyped_defs
# stays off (geometry helpers lean on untyped build123d returns); these flags catch
# real gaps without demanding annotations everywhere.
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
warn_return_any = true
extra_checks = true

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-timeout>=2",
    "pytest-xdist>=3",
    "ruff>=0.4",
]

[tool.uv]
# On Python 3.13/3.14, build123d resolves to 0.11, whose OCP kernel is
# cadquery-ocp-novtk (VTK dropped from the transitive tree — fine here, draftwright
# renders headless and never imports VTK). Its 7.9.3.1.1 release ships a broken macOS
# wheel (no OCP.GccEnt module → build123d fails to import), so pin it out. Only bites
# when novtk is actually resolved (build123d 0.11); harmless on 0.10/cadquery-ocp.
# Mirrors pzfreo/build123d-mcp. Remove once upstream fixes the wheel.
constraint-dependencies = ["cadquery-ocp-novtk!=7.9.3.1.1"]
